--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
           <a-text class="answer" value="Roter Hase" rotation="-90 0 0" scale="4 4 4" position="2 0 0" width="10" height="10" color="black" font-weight="bold" visible="false"></a-text>
         </a-box>
         <a-plane class="plane" position="0 0 0" width="0" height="0" color="black" rotation="-90 0 0" opacity="0.5">
-          <a-text class="question" value="Franz Marc malte oft Tiere. Für welches Tier war er besonders bekannt?" position="100 0 0" scale="1.1 1.5 1.5" color="red"></a-text>
+          <a-text class="question" value="Franz Marc malte oft Tiere. Fuer welches Tier war er besonders bekannt?" position="100 0 0" scale="1.1 1.5 1.5" color="red"></a-text>
         </a-plane>
       </a-marker>
 
