--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       <!-- Marker 1 -->
       <a-marker id="marker" type="pattern" url="marker\pattern-A_Marker.patt">
         <a-gltf-model class="model" src="#edgar_degas" scale="1 1 1" rotation="-90 0 0" position="0 0.2 0" id="edgar_degas" material="side: double;" cursor-listener></a-gltf-model>
-        <a-text value="Autor:" position="0.7 0 -0.5" rotation="-90 0 0" color="white"></a-text>
+        <a-text value="Model created by:" position="0.6 0 -0.5" rotation="-90 0 0" color="black" scale="0.3 0.3 0.3"></a-text>
 
         <!-- Antwortobjekte, die zunächst unsichtbar sind -->
         <a-box class="false-answer"  scale="0.05 0.05 0.05" width="0" height="0" depth="0" color="green" position="-0.6 0.5 0.55" material="opacity: 0.5" false-answer>
@@ -95,6 +95,7 @@
             <!-- Marker 1 -->
             <a-marker id="marker2" type="pattern" url="marker\pattern-C_Marker.patt">
               <a-gltf-model class="model" src="#van_gogh" scale="1 1 1" rotation="-90 0 0" position="0 0.2 0" id="van_gogh" material="side: double;" cursor-listener></a-gltf-model>
+              <a-text value="Autor:" position="0.7 0 -0.5" rotation="-90 0 0" color="black"></a-text>
 
       
               <!-- Antwortobjekte, die zunächst unsichtbar sind -->
@@ -119,7 +120,7 @@
                   <!-- Marker 1 -->
       <a-marker id="marker3" type="pattern" url="marker\pattern-D_Marker.patt">
         <a-gltf-model class="model" src="#mona_lisa" scale="2 2 2" rotation="-90 0 0" position="0 0.2 0" id="mona" material="side: double;" cursor-listener></a-gltf-model>
-        <a-text value="Autor:" position="0.7 0 -0.5" rotation="-90 0 0" color="white"></a-text>
+        <a-text value="Autor:" position="0.7 0 -0.5" rotation="-90 0 0" color="black"></a-text>
 
         <!-- Antwortobjekte, die zunächst unsichtbar sind -->
         <a-box class="false-answer"  scale="0.05 0.05 0.05" width="0" height="0" depth="0" color="green" position="-0.6 0.5 0.55" material="opacity: 0.5" false-answer>
@@ -142,8 +143,8 @@
 
             <!-- Marker 1 -->
             <a-marker id="marker4" type="pattern" url="marker\pattern-E_Marker.patt">
-              <a-gltf-model class="model" src="#water_lilies" scale="0.1 0.1 0.1" rotation="-90 0 0" position="0 0.2 0" id="lilies" material="side: double;" cursor-listener></a-gltf-model>
-              <a-text value="Autor:" position="0.7 0 -0.5" rotation="-90 0 0" color="white"></a-text>
+              <a-gltf-model class="model" src="#water_lilies" scale="0.05 0.05 0.05" rotation="-90 0 0" position="0 0.2 0" id="lilies" material="side: double;" cursor-listener></a-gltf-model>
+              <a-text value="Autor:" position="0.7 0 -0.5" rotation="-90 0 0" color="black"></a-text>
       
               <!-- Antwortobjekte, die zunächst unsichtbar sind -->
               <a-box class="false-answer"  scale="0.05 0.05 0.05" width="0" height="0" depth="0" color="green" position="-0.6 0.5 0.55" material="opacity: 0.5" right-answer>
@@ -159,7 +160,7 @@
                 <a-text class="answer" value="Picasso" rotation="-90 0 0" scale="4 4 4" position="-2.2 0 0" width="10" height="10" color="black" font-weight="bold" visible="false"></a-text>
               </a-box>
               <a-plane class="plane" position="0 0 0" width="0" height="0" color="#ffffff" rotation="-90 0 0" opacity="0.5">
-                <a-text class="question" value="Welcher Maler war beruehmt für seine Wasserlilien?" position="100 0 0" scale="1.1 1.5 1.5" color="red"></a-text>
+                <a-text class="question" value="Welcher Maler war beruehmt fuer seine Wasserlilien?" position="100 0 0" scale="1.1 1.5 1.5" color="red"></a-text>
               </a-plane>
             </a-marker>
 
@@ -167,7 +168,7 @@
                   <!-- Marker 1 -->
       <a-marker id="marker5" type="pattern" url="marker\pattern-F_Marker.patt">
         <a-gltf-model class="model" src="#franz_marc" scale="1 1 1" rotation="-90 0 0" position="0 0.2 0" id="franz_marc" material="side: double;" cursor-listener></a-gltf-model>
-        <a-text value="Autor:" position="0.7 0 -0.5" rotation="-90 0 0" color="white"></a-text>
+        <a-text value="Autor:" position="0.7 0 -0.5" rotation="-90 0 0" color="black"></a-text>
 
         <!-- Antwortobjekte, die zunächst unsichtbar sind -->
         <a-box class="false-answer"  scale="0.05 0.05 0.05" width="0" height="0" depth="0" color="green" position="-0.6 0.5 0.55" material="opacity: 0.5" right-answer>
@@ -391,7 +392,7 @@ AFRAME.registerComponent('cursor-listener', {
             obj.setAttribute('scale', '1 1 1');
             }else if(id === 'lilies'){
               obj.setAttribute('position', '0 0.2 -0.6');
-            obj.setAttribute('scale', '0.05 0.05 0.05');
+            obj.setAttribute('scale', '0.025 0.025 0.025');
             }else{
               obj.setAttribute('position', '0 0.2 -0.6');
             obj.setAttribute('scale', '0.5 0.5 0.5');
@@ -411,14 +412,11 @@ AFRAME.registerComponent('cursor-listener', {
             }
           }
           if(obj.tagName === 'A-PLANE'){
-            obj.setAttribute('width', '2');
-            obj.setAttribute('height', '0.5');
-            obj.setAttribute('position', '0.05 0 0');
             var children = obj.children;
             // Jetzt kannst du auf die Kinder zugreifen und sie manipulieren
             for (var i = 0; i < children.length; i++) {
               var child = children[i];
-              child.setAttribute('position', '-1 0 0');
+              child.setAttribute('position', '-0.9 0 0');
               child.setAttribute('width', '2');
             }
           }
