add text to credit autor of model

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       <!-- Marker 1 -->
       <a-marker id="marker" type="pattern" url="marker\pattern-A_Marker.patt">
         <a-gltf-model class="model" src="#edgar_degas" scale="1 1 1" rotation="-90 0 0" position="0 0.2 0" id="edgar_degas" material="side: double;" cursor-listener></a-gltf-model>
-        <a-text value="Model created by:" position="0.6 0 -0.5" rotation="-90 0 0" color="black" scale="0.3 0.3 0.3"></a-text>
+        <a-text value="This work is based on &quot;EDGAR DEGAS La Classe De Danse&quot; (https://sketchfab.com/3d-models/edgar-degas-la-classe-de-danse-7925b41700b747c69e096ba380d3d55e) by mfb64 (https://sketchfab.com/mfb64) licensed under CC-BY-4.0 (http://creativecommons.org/licenses/by/4.0/)" position="0.6 0 -0.5" rotation="-90 0 0" color="black" scale="0.3 0.3 0.3"></a-text>
 
         <!-- Antwortobjekte, die zunächst unsichtbar sind -->
         <a-box class="false-answer"  scale="0.05 0.05 0.05" width="0" height="0" depth="0" color="green" position="-0.6 0.5 0.55" material="opacity: 0.5" false-answer>
@@ -72,7 +72,7 @@
             <!-- Marker 2-->
       <a-marker id="marker1" type="pattern" url="marker\pattern-B_Marker.patt">
         <a-gltf-model class="model" src="#banksy" scale="1 1 1" rotation="0 0 0" position="0 0.2 0" id="banksy" material="side: double;" cursor-listener></a-gltf-model>
-        <a-text value="Autor:" position="0.7 0 -0.5" rotation="-90 0 0" color="black"></a-text>
+        <a-text value="This work is based on &quot;Banksy 3&quot; (https://sketchfab.com/3d-models/banksy-3-a8ee972c1258457ea8dc1f747886c307) by Nobby76 (https://sketchfab.com/nobbyt76) licensed under CC-BY-4.0 (http://creativecommons.org/licenses/by/4.0/)" position="0.7 0 -0.5" rotation="-90 0 0" color="black" scale="0.3 0.3 0.3"></a-text>
 
         <!-- Antwortobjekte, die zunächst unsichtbar sind -->
         <a-box class="false-answer"  scale="0.05 0.05 0.05" width="0" height="0" depth="0" color="green" position="-0.6 0.5 0.55" material="opacity: 0.5" false-answer>
@@ -95,7 +95,7 @@
             <!-- Marker 1 -->
             <a-marker id="marker2" type="pattern" url="marker\pattern-C_Marker.patt">
               <a-gltf-model class="model" src="#van_gogh" scale="1 1 1" rotation="-90 0 0" position="0 0.2 0" id="van_gogh" material="side: double;" cursor-listener></a-gltf-model>
-              <a-text value="Autor:" position="0.7 0 -0.5" rotation="-90 0 0" color="black"></a-text>
+              <a-text value="This work is based on &quot;De sterrennacht  Nit estelada  The Starry Night&quot; (https://sketchfab.com/3d-models/de-sterrennacht-nit-estelada-the-starry-night-4ba76c4b60444be2a0bf75435f3889b2) by dimoni (https://sketchfab.com/dimoni) licensed under CC-BY-4.0 (http://creativecommons.org/licenses/by/4.0/)" position="0.7 0 -0.5" rotation="-90 0 0" color="black" scale="0.3 0.3 0.3"></a-text>
 
       
               <!-- Antwortobjekte, die zunächst unsichtbar sind -->
@@ -120,7 +120,7 @@
                   <!-- Marker 1 -->
       <a-marker id="marker3" type="pattern" url="marker\pattern-D_Marker.patt">
         <a-gltf-model class="model" src="#mona_lisa" scale="2 2 2" rotation="-90 0 0" position="0 0.2 0" id="mona" material="side: double;" cursor-listener></a-gltf-model>
-        <a-text value="Autor:" position="0.7 0 -0.5" rotation="-90 0 0" color="black"></a-text>
+        <a-text value="This work is based on &quot;MONA LISA&quot; (https://sketchfab.com/3d-models/mona-lisa-d5889769f4844087b5deca07d7a4dcf2) by THE 3D GUY (https://sketchfab.com/mishrau60) licensed under CC-BY-4.0 (http://creativecommons.org/licenses/by/4.0/)" position="0.6 0 -0.5" rotation="-90 0 0" color="black" scale="0.3 0.3 0.3"></a-text>
 
         <!-- Antwortobjekte, die zunächst unsichtbar sind -->
         <a-box class="false-answer"  scale="0.05 0.05 0.05" width="0" height="0" depth="0" color="green" position="-0.6 0.5 0.55" material="opacity: 0.5" false-answer>
@@ -144,7 +144,7 @@
             <!-- Marker 1 -->
             <a-marker id="marker4" type="pattern" url="marker\pattern-E_Marker.patt">
               <a-gltf-model class="model" src="#water_lilies" scale="0.05 0.05 0.05" rotation="-90 0 0" position="0 0.2 0" id="lilies" material="side: double;" cursor-listener></a-gltf-model>
-              <a-text value="Autor:" position="0.7 0 -0.5" rotation="-90 0 0" color="black"></a-text>
+              <a-text value="This work is based on &quot;Water Lilies (Agapanthus) - Claude Monet&quot; (https://sketchfab.com/3d-models/water-lilies-agapanthus-claude-monet-e9c28c48229943778b38a03056f17395) by Thomas Flynn (https://sketchfab.com/nebulousflynn) licensed under CC-BY-4.0 (http://creativecommons.org/licenses/by/4.0/)" position="0.6 0 -0.5" rotation="-90 0 0" color="black" scale="0.3 0.3 0.3"></a-text>
       
               <!-- Antwortobjekte, die zunächst unsichtbar sind -->
               <a-box class="false-answer"  scale="0.05 0.05 0.05" width="0" height="0" depth="0" color="green" position="-0.6 0.5 0.55" material="opacity: 0.5" right-answer>
@@ -168,7 +168,7 @@
                   <!-- Marker 1 -->
       <a-marker id="marker5" type="pattern" url="marker\pattern-F_Marker.patt">
         <a-gltf-model class="model" src="#franz_marc" scale="1 1 1" rotation="-90 0 0" position="0 0.2 0" id="franz_marc" material="side: double;" cursor-listener></a-gltf-model>
-        <a-text value="Autor:" position="0.7 0 -0.5" rotation="-90 0 0" color="black"></a-text>
+        <a-text value="This work is based on &quot;Siberian Dogs in the Snow (1909-10) | Franz Marc&quot; (https://sketchfab.com/3d-models/siberian-dogs-in-the-snow-1909-10-franz-marc-3e9aaf9f45834a4787b69a3a442640db) by threesixty.art (https://sketchfab.com/philippe.mompas) licensed under CC-BY-4.0 (http://creativecommons.org/licenses/by/4.0/)" position="0.8 0 -0.5" rotation="-90 0 0" color="black" scale="0.3 0.3 0.3"></a-text>
 
         <!-- Antwortobjekte, die zunächst unsichtbar sind -->
         <a-box class="false-answer"  scale="0.05 0.05 0.05" width="0" height="0" depth="0" color="green" position="-0.6 0.5 0.55" material="opacity: 0.5" right-answer>
